# MVP

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experience_feedback.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PROJECT_FUTURE_ROADMAP.md  PROJECT_PHASE_2_PORTABLE_PREVIEW.md  PROJECT_PHASE_3_DATA_SAFETY.md  PROJECT_PHASE_4_INSIGHTS.md  PROJECT_PHASE_5_WORKFLOW.md  PROJECT_PHASE_6_OPEN_SOURCE.md  PROJECT_UI_REFRESH.md  RELEASE_DRAFT_v0.2.0.md  快速开始.txt
scripts/: portable-release.ps1  windows-gnu.ps1
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CarryoverInbox.tsx  StageTabs.tsx  TaskQuickAdd.test.tsx  TaskQuickAdd.tsx  TaskStatusBadge.tsx  ViewSwitch.tsx  WorkspaceDock.test.tsx  WorkspaceDock.tsx  WorkspaceModeGate.test.tsx  WorkspaceModeGate.tsx
src/data/: dailyRepository.ts  demoSeed.test.ts  demoSeed.ts  exportData.test.ts  exportData.ts  importData.test.ts  importData.ts  memoryDailyRepository.test.ts  memoryDailyRepository.ts  portableDatabase.test.ts  portableDatabase.ts  readableExport.test.ts  readableExport.ts  repositoryFactory.test.ts  repositoryFactory.ts  schema.ts  taskTemplates.test.ts  taskTemplates.ts  tauriSqlDailyRepository.ts  workspaceMode.test.ts  workspaceMode.ts
src/domain/: galaxyLayout.test.ts  galaxyLayout.ts  insightRules.test.ts  insightRules.ts  (+13 more)
(+46 files in other folders)
