[package]
name = "daily-plan-review"
version = "0.1.0"
description = "Daily planning and review desktop app"
authors = ["PAIDA"]
edition = "2021"

[lib]
name = "daily_plan_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
